<resources>
    <string name="app_name">QuickSort</string>
    <string name="title_value">Value</string>
    <string name="message_type_number">Type a number</string>
    <string name="action_add">Add</string>
    <string name="action_done">Done</string>
    <string name="action_restart">Reset</string>
    <string name="title_steps">Quick Sort Result</string>
    <string name="title_current_values">Current values</string>
</resources>
