<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.elena.quicksort.MainActivity">

    <TextView
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_value"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/text_value" />
    <EditText
        android:textColorHint="@android:color/white"
        android:hint="@string/message_type_number"
        android:textSize="20sp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textColor="@android:color/white"
        android:id="@+id/edit_number"
        app:layout_constraintTop_toBottomOf="@+id/text_value"
        app:layout_constraintLeft_toLeftOf="@+id/text_value" />
    <Button
        android:onClick="addValueToUnsortedList"
        android:id="@+id/button_add"
        android:textSize="15sp"
        android:background="@color/colorAccent"
        android:text="@string/action_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/edit_number"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_number"
        app:layout_constraintRight_toRightOf="@+id/edit_number" />

    <Button
        android:onClick="sortValues"
        android:id="@+id/button_done"
        android:textSize="15sp"
        android:background="@color/colorAccent"
        android:text="@string/action_done"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/button_add"
        app:layout_constraintRight_toRightOf="@+id/button_add"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/button_add" />
    <Button
        android:onClick="reset"
        android:id="@+id/button_restart"
        android:textSize="15sp"
        android:background="@color/colorAccent"
        android:text="@string/action_restart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/button_done"
        app:layout_constraintRight_toRightOf="@+id/button_done"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/button_done" />
    <TextView
        android:text="@string/title_current_values"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:id="@+id/text_current_values"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/button_restart"
        app:layout_constraintLeft_toLeftOf="@+id/button_restart" />
    <ScrollView
        android:id="@+id/scroll_added_values"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/text_current_values"
        app:layout_constraintLeft_toLeftOf="@+id/text_current_values"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        app:layout_constraintRight_toRightOf="@+id/button_restart">
        <TextView
            android:textSize="20sp"
            android:textColor="@android:color/white"
            tools:text="1, 0, 2, 4, 9, 5"
            android:id="@+id/text_added_values"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </ScrollView>

    <TextView
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:text="@string/title_steps"
        android:id="@+id/text_steps"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/button_add"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toTopOf="@+id/text_value"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="0dp"
        app:layout_constraintRight_toRightOf="parent" />

    <ScrollView
        android:id="@+id/scroll_sorted"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/text_steps"
        app:layout_constraintLeft_toLeftOf="@+id/text_steps"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintRight_toRightOf="@+id/text_steps"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_sorted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
